Fix clipping between numbers and permalink

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -380,6 +380,8 @@ header{
     display: none;
     color: #bbb;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.6);
+    right: 40px;
+    top: 12px;
   }
 
   .textlist tr:hover .permalink {
@@ -1123,11 +1125,11 @@ h2.loading {
   text-align: center;
   line-height: 42px;
   color: @bright-blue;
-  
+
   text-shadow: 0 0 20px rgba(200, 200, 200, .5);
   -webkit-animation: opacity-pulsate 2s linear;
-  -webkit-animation-iteration-count: infinite; 
-  
+  -webkit-animation-iteration-count: infinite;
+
 }
 
 @-webkit-keyframes pulsate {
